overflow scroll on root to addresss mobile issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,10 @@ p {
   font-family: 'Cormorant Garamond', serif;
 }
 
+#root {
+  overflow: scroll;
+}
+
 .App {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
